build_errors.txt
[ 12%] Built target libzstd_static
[ 12%] Building CUDA object CMakeFiles/cuda_zstd_static.dir/src/lz77_parallel.cu.o
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(84): error: expression preceding parentheses of apparent call must have (pointer-to-) function type
      u32 prev_cost = costs[pos - 1].cost();
                      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(88): error: class "compression::lz77::ParseCost" has no member "set"
      literal_cost.set(literal_cost_val, pos - 1);
                   ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(97): error: class "compression::lz77::ParseCost" has no member "set"
              best_cost.set(match_cost_val, pos - 1);
                        ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(268): error: class "compression::lz77::ParseCost" has no member "set"
      initial_cost.set(0, 0);
                   ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(344): error: class "compression::lz77::ParseCost" has no member "set"
      initial_cost.set(0, 0);
                   ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(358): error: name followed by "::" must be a class or namespace name
          ::cuda_zstd::lz77::optimal_parse_kernel_v2<<<num_blocks, threads, 0, stream>>>(
            ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(360): error: the global scope has no "cuda_zstd"
              reinterpret_cast<::cuda_zstd::lz77::Match*>(workspace.d_matches),
                                 ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(360): error: expected a ">"
              reinterpret_cast<::cuda_zstd::lz77::Match*>(workspace.d_matches),
                                          ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(361): error: the global scope has no "cuda_zstd"
              reinterpret_cast<::cuda_zstd::lz77::ParseCost*>(workspace.d_costs)
                                 ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu(361): error: expected a ">"
              reinterpret_cast<::cuda_zstd::lz77::ParseCost*>(workspace.d_costs)
                                          ^

10 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/lz77_parallel.cu".
gmake[2]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:355: CMakeFiles/cuda_zstd_static.dir/src/lz77_parallel.cu.o] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:267: CMakeFiles/cuda_zstd_static.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
